[package]
name = "lights"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
warp = "0.2.5"
smol = "1.2.5"
async-compat = "0.1.4"
serde = { version = "1.0.118", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
http = "0.2.2"
bytes = "0.5.6"
serde_json = "1.0.60"
lights-broadlink = { git = "https://github.com/syntacticsugarglider/lights-broadlink", branch = "main" }
lights-sengled = { git = "https://github.com/syntacticsugarglider/lights-sengled", branch = "main" }
lights-tuya = { git = "https://github.com/syntacticsugarglider/lights-tuya", branch = "main" }
futures = "0.3.8"
surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
thiserror = "1.0.22"
toml = "0.5.7"
