[package]
name = "lights-api"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }

[dev-dependencies]
smol = "1.2.5"
